<resources>
    <string name="app_name">locksmith</string>
    <string name="setting">setting</string>
    <string name="Setting">Setting</string>
    <string name="home">home</string>
    <string name="pref_header_general">theme</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="follow_system">Follow system</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to purple</string>
    <string name="pref_language_name">Select language</string>
    <string name="pref_language_general">language</string>
    <string name="System_default">System default</string>
    <string name="Simplified_Chinese">Simplified Chinese</string>
    <string name="English">English</string>

    <string name="grid_size_1" translatable="false">1</string>
    <string name="grid_size_2" translatable="false">2</string>
    <string name="grid_size_3" translatable="false">3</string>
    <string name="grid_size_4" translatable="false">4</string>
    <string name="grid_size_5" translatable="false">5</string>
    <string name="grid_size_6" translatable="false">6</string>
    <string name="grid_size_7" translatable="false">7</string>
    <string name="grid_size_8" translatable="false">8</string>
    <string name="pref_title_general_theme">App theme</string>
    <string name="all_items">All items</string>
    <string name="passwords">Passwords</string>
    <string name="secure_notes">Secure notes</string>
    <string name="contact_info">Contact info</string>
    <string name="add_item">Add item</string>
    <string name="payment_card">Payment Card</string>
    <string name="bank_account">Bank account</string>
    <string name="save">save</string>
    <string name="itemName">item name</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="url">URL</string>
    <string name="note">note</string>
    <string name="customactivityoncrash_error_activity_error_details_share" translatable="false">Share Crash Report</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="missing_info">Missing Info</string>
    <string name="please_add_the_item_name">Please add the item name</string>
    <string name="please_add_the_password">Please add the password</string>
    <string name="unlock_with_biometrics">Unlock with biometrics</string>
    <string name="unlock_with_fingerprint">Scan your fingerprints</string>
    <string name="unlock_with_pin">Use PIN code</string>
    <string name="cancel">cancel</string>
    <string name="base_exit_main_tip">Press the return key again to exit</string>
    <string name="initializing_key_information">Please wait while initializing key information</string>
    <string name="init_passport_error">Init passport error</string>
    <string name="init_passport_error_detail">The device hardware security module is unavailable</string>
    <string name="init_passport_success">Passport init success</string>
    <string name="saved">Saved</string>
    <string name="empty_no_data">Empty, Click to add</string>
    <string name="delete_item_error">fail to delete item</string>
    <string name="add_item_error">fail to add item</string>
    <string name="update_item_error">fail to update item</string>

</resources>